--- a/LIMA/Aula14/assets/pages/nivel3.html
+++ b/LIMA/Aula14/assets/pages/nivel3.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercícios Nível 3</title>
+    <link rel="stylesheet" href="../css/styleEx.css">
   </head>
-  <body></body>
+  <body>
+
+    <header>
+      <span>NÍVEL 3</span>
+
+      <div>
+        <a href="../../index.html"><p>INÍCIO</p></a>
+        <a href="./nivel1.html"><p>NÍVEL 1</p></a>
+        <a href="./nivel2.html"><p>NÍVEL 2</p></a>
+      </div>
+    </header>
+
+    <main>
+
+      <h1>EXERCÍCIOS</h1>
+
+      <div>
+        <button><span>21</span></button>
+        <button><span>22</span></button>
+        <button><span>23</span></button>
+        <button><span>24</span></button>
+        <button><span>25</span></button>
+        <button><span>26</span></button>
+        <button><span>27</span></button>
+        <button><span>28</span></button>
+        <span></span>
+        <button class="excluir"><span>X</span></button>
+      </div>
+    </main>
+
+  </body>
+  <script src="../js/scriptNivel3.js"></script>
 </html>
