--- a/LIMA/Aula14/index.html
+++ b/LIMA/Aula14/index.html
@@ -12,21 +12,26 @@
     </header>
 
     <main>
-      <a href="./assets/pages/nivel1.html">
-        <div>
-          <p>NÍVEL 1</p>
-        </div>
-      </a>
-      <a href="./assets/pages/nivel2.html">
-        <div>
-          <p>NÍVEL 2</p>
-        </div>
-      </a>
-      <a href="./assets/pages/nivel3.html">
-        <div>
-          <p>NÍVEL 3</p>
-        </div>
-      </a>
+      
+      <h1>NÍVEIS</h1>
+
+      <div>
+        <a href="./assets/pages/nivel1.html">
+          <div>
+            <p>1</p>
+          </div>
+        </a>
+        <a href="./assets/pages/nivel2.html">
+          <div>
+            <p>2</p>
+          </div>
+        </a>
+        <a href="./assets/pages/nivel3.html">
+          <div>
+            <p>3</p>
+          </div>
+        </a>
+    </div>
     </main>
   </body>
 </html>
