--- a/LIMA/Aula14/assets/pages/nivel1.html
+++ b/LIMA/Aula14/assets/pages/nivel1.html
@@ -22,19 +22,19 @@
 
       <h1>EXERCÍCIOS</h1>
 
-      <div>
-        <button><span>01</span></button>
-        <button><span>02</span></button>
-        <button><span>03</span></button>
-        <button><span>04</span></button>
-        <button><span>05</span></button>
-        <button><span>06</span></button>
-        <button><span>07</span></button>
-        <button><span>08</span></button>
-        <button><span>09</span></button>
-        <button><span>10</span></button>
+      <div class="divBtn">
+        <button class="button"><span>01</span></button>
+        <button class="button"><span>02</span></button>
+        <button class="button"><span>03</span></button>
+        <button class="button"><span>04</span></button>
+        <button class="button"><span>05</span></button>
+        <button class="button"><span>06</span></button>
+        <button class="button"><span>07</span></button>
+        <button class="button"><span>08</span></button>
+        <button class="button"><span>09</span></button>
+        <button class="button"><span>10</span></button>
         <span></span>
-        <button class="excluir"><span>X</span></button>
+        <button class="button excluir"><span>X</span></button>
       </div>
 
     </main>
