--- a/LIMA/Aula14/assets/pages/nivel2.html
+++ b/LIMA/Aula14/assets/pages/nivel2.html
@@ -22,19 +22,19 @@
 
       <h1>EXERCÍCIOS</h1>
 
-      <div>
-        <button><span>11</span></button>
-        <button><span>12</span></button>
-        <button><span>13</span></button>
-        <button><span>14</span></button>
-        <button><span>15</span></button>
-        <button><span>16</span></button>
-        <button><span>17</span></button>
-        <button><span>18</span></button>
-        <button><span>19</span></button>
-        <button><span>20</span></button>
+      <div class="divBtn">
+        <button class="button"><span>11</span></button>
+        <button class="button"><span>12</span></button>
+        <button class="button"><span>13</span></button>
+        <button class="button"><span>14</span></button>
+        <button class="button"><span>15</span></button>
+        <button class="button"><span>16</span></button>
+        <button class="button"><span>17</span></button>
+        <button class="button"><span>18</span></button>
+        <button class="button"><span>19</span></button>
+        <button class="button"><span>20</span></button>
         <span></span>
-        <button class="excluir"><span>X</span></button>
+        <button class="button excluir"><span>X</span></button>
       </div>
 
     </main>
