--- a/LIMA/Aula14/assets/pages/nivel3.html
+++ b/LIMA/Aula14/assets/pages/nivel3.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercícios Nível 3</title>
-    <link rel="stylesheet" href="../css/styleEx.css">
+    <link rel="stylesheet" href="../css/styleEx.css" />
   </head>
   <body>
-
     <header>
       <span>NÍVEL 3</span>
 
@@ -19,23 +18,23 @@
     </header>
 
     <main>
-
       <h1>EXERCÍCIOS</h1>
 
-      <div>
-        <button><span>21</span></button>
-        <button><span>22</span></button>
-        <button><span>23</span></button>
-        <button><span>24</span></button>
-        <button><span>25</span></button>
-        <button><span>26</span></button>
-        <button><span>27</span></button>
-        <button><span>28</span></button>
+      <div class="divBtn">
+        <button class="button" onclick="ex21()"><span>21</span></button>
+        <button class="button" onclick="ex22()"><span>22</span></button>
+        <button class="button" onclick="ex23()"><span>23</span></button>
+        <button class="button" onclick="ex24()"><span>24</span></button>
+        <button class="button" onclick="ex25()"><span>25</span></button>
+        <button class="button" onclick="ex26()"><span>26</span></button>
+        <button class="button" onclick="ex27()"><span>27</span></button>
+        <button class="button" onclick="ex28()"><span>28</span></button>
         <span></span>
-        <button class="excluir"><span>X</span></button>
+        <button class="button excluir"><span>X</span></button>
       </div>
-    </main>
 
+      <div id="result"></div>
+    </main>
   </body>
   <script src="../js/scriptNivel3.js"></script>
 </html>
