--- a/LIMA/Aula14/assets/pages/nivel3.html
+++ b/LIMA/Aula14/assets/pages/nivel3.html
@@ -30,7 +30,7 @@
         <button class="button" onclick="ex27()"><span>27</span></button>
         <button class="button" onclick="ex28()"><span>28</span></button>
         <span></span>
-        <button class="button excluir"><span>X</span></button>
+        <button class="button excluir" onclick="excluir()"><span>X</span></button>
       </div>
 
       <div id="result"></div>
