--- a/LIMA/Aula14/assets/pages/nivel1.html
+++ b/LIMA/Aula14/assets/pages/nivel1.html
@@ -23,21 +23,23 @@
       <h1>EXERCÍCIOS</h1>
 
       <div class="divBtn">
-        <button class="button"><span>01</span></button>
-        <button class="button"><span>02</span></button>
-        <button class="button"><span>03</span></button>
-        <button class="button"><span>04</span></button>
-        <button class="button"><span>05</span></button>
-        <button class="button"><span>06</span></button>
-        <button class="button"><span>07</span></button>
-        <button class="button"><span>08</span></button>
-        <button class="button"><span>09</span></button>
-        <button class="button"><span>10</span></button>
+        <button class="button" onclick="ex01()"><span>01</span></button>
+        <button class="button" onclick="ex02()"><span>02</span></button>
+        <button class="button" onclick="ex03()"><span>03</span></button>
+        <button class="button" onclick="ex04()"><span>04</span></button>
+        <button class="button" onclick="ex05()"><span>05</span></button>
+        <button class="button" onclick="ex06()"><span>06</span></button>
+        <button class="button" onclick="ex07()"><span>07</span></button>
+        <button class="button" onclick="ex08()"><span>08</span></button>
+        <button class="button" onclick="ex09()"><span>09</span></button>
+        <button class="button" onclick="ex10()"><span>10</span></button>
         <span></span>
         <button class="button excluir"><span>X</span></button>
       </div>
 
+      <div id="result"></div>
     </main>
 
   </body>
+  <script src="../js/scriptNivel1.js"></script>
 </html>
