--- a/LIMA/Aula14/assets/pages/nivel1.html
+++ b/LIMA/Aula14/assets/pages/nivel1.html
@@ -34,7 +34,7 @@
         <button class="button" onclick="ex09()"><span>09</span></button>
         <button class="button" onclick="ex10()"><span>10</span></button>
         <span></span>
-        <button class="button excluir"><span>X</span></button>
+        <button class="button excluir" onclick="excluir()"><span>X</span></button>
       </div>
 
       <div id="result"></div>
