--- a/LIMA/Aula14/assets/pages/nivel2.html
+++ b/LIMA/Aula14/assets/pages/nivel2.html
@@ -23,21 +23,24 @@
       <h1>EXERCÍCIOS</h1>
 
       <div class="divBtn">
-        <button class="button"><span>11</span></button>
-        <button class="button"><span>12</span></button>
-        <button class="button"><span>13</span></button>
-        <button class="button"><span>14</span></button>
-        <button class="button"><span>15</span></button>
-        <button class="button"><span>16</span></button>
-        <button class="button"><span>17</span></button>
-        <button class="button"><span>18</span></button>
-        <button class="button"><span>19</span></button>
-        <button class="button"><span>20</span></button>
+        <button class="button" onclick="ex11()"><span>11</span></button>
+        <button class="button" onclick="ex12()"><span>12</span></button>
+        <button class="button" onclick="ex13()"><span>13</span></button>
+        <button class="button" onclick="ex14()"><span>14</span></button>
+        <button class="button" onclick="ex15()"><span>15</span></button>
+        <button class="button" onclick="ex16()"><span>16</span></button>
+        <button class="button" onclick="ex17()"><span>17</span></button>
+        <button class="button" onclick="ex18()"><span>18</span></button>
+        <button class="button" onclick="ex19()"><span>19</span></button>
+        <button class="button" onclick="ex20()"><span>20</span></button>
         <span></span>
         <button class="button excluir"><span>X</span></button>
       </div>
 
+      <div id="result"></div>
+
     </main>
 
   </body>
+  <script src="../js/scriptNivel2.js"></script>
 </html>
