--- a/LIMA/Aula14/index.html
+++ b/LIMA/Aula14/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercícios Aula 14</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="shortcut icon" href="./assets/img/js.png" type="image/x-icon">
   </head>
   <body>
     <header>
