--- a/LIMA/calculadora/index.html
+++ b/LIMA/calculadora/index.html
@@ -17,8 +17,8 @@
         <div class="calc">
           <div class="display">0</div>
           <div class="keys">
-            <button><i class="bi bi-backspace"></i></button>
-            <button>C</button>
+            <button class="delete"><i class="bi bi-backspace"></i></button>
+            <button class="delete-all">C</button>
             <button>%</button>
             <button>+</button>
             <button>7</button>
@@ -28,13 +28,13 @@
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>*</button>
+            <button>x</button>
             <button>1</button>
             <button>2</button>
             <button>3</button>
             <button>÷</button>
-            <button>.</button>
             <button class="zero">0</button>
+            <button>.</button>
             <button class="equal">=</button>
           </div>
         </div>
