--- a/LIMA/calculadora/index.html
+++ b/LIMA/calculadora/index.html
@@ -15,7 +15,7 @@
     <main>
       <div class="container-calc">
         <div class="calc">
-          <div class="display">0</div>
+          <div class="display" id="display">0</div>
           <div class="keys">
             <button class="delete"><i class="bi bi-backspace"></i></button>
             <button class="delete-all">C</button>
